--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -138,13 +138,19 @@ jobs:
       run: |
         echo "SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV
 
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v4
+      with:
+        aqtversion: '==3.1.*'
+        version: '6.8.0'
+        host: 'windows'
+        target: 'desktop'
+        arch: 'win64_msvc2022_64'
+        modules: 'qt5compat qtnetworkauth qtscxml qtshadertools qtwebsockets'
     - name: Setup environment
       run: |
         buildscripts\ci\windows\setup.bat
-    - name: Make environment file
-      shell: bash
-      run: |
-        bash ./buildscripts/ci/windows/make_environment.sh
+
     - name: Generate _en.ts files
       shell: bash
       env:
@@ -152,7 +158,7 @@ jobs:
         POSTPROCESS_ARGS: "--warn-only ${{ env.DO_PLACEHOLDER_TRANSLATIONS == 'true' && '--generate-placeholder-translations' || '' }}"
         POSTPROCESS_LAUNCHER: "python3 -X utf8"
       run: |
-        bash ./buildscripts/ci/translation/run_lupdate.sh
+        bash ./tools/translations/run_lupdate.sh
     - name: Update .ts files
       if: env.DO_UPDATE_TS == 'true'
       shell: bash
@@ -269,13 +275,19 @@ jobs:
       run: |
         echo "SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV
 
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v4
+      with:
+        aqtversion: '==3.1.*'
+        version: '6.8.0'
+        host: 'windows'
+        target: 'desktop'
+        arch: 'win64_msvc2022_64'
+        modules: 'qt5compat qtnetworkauth qtscxml qtshadertools qtwebsockets'
     - name: Setup environment
       run: |
         buildscripts\ci\windows\setup.bat --portable ON
-    - name: Make environment file
-      shell: bash
-      run: |
-        bash ./buildscripts/ci/windows/make_environment.sh
+
     - name: Generate _en.ts files
       shell: bash
       env:
@@ -283,7 +295,7 @@ jobs:
         POSTPROCESS_ARGS: "--warn-only ${{ env.DO_PLACEHOLDER_TRANSLATIONS == 'true' && '--generate-placeholder-translations' || '' }}"
         POSTPROCESS_LAUNCHER: "python3 -X utf8"
       run: |
-        bash ./buildscripts/ci/translation/run_lupdate.sh
+        bash ./tools/translations/run_lupdate.sh
     - name: Update .ts files
       if: env.DO_UPDATE_TS == 'true'
       shell: bash
