--- a/.github/workflows/build_linux_arm.yml
+++ b/.github/workflows/build_linux_arm.yml
@@ -82,8 +82,8 @@ jobs:
     - name: "Configure workflow"
       env:
         pull_request_title: ${{ github.event.pull_request.title }}
-        SENTRY_SERVER_MU4_KEY: ${{ secrets.SENTRY_SERVER_MU4_KEY }}
-        SENTRY_SERVER_SANDBOX_KEY: ${{ secrets.SENTRY_SERVER_SANDBOX_KEY }}
+        SENTRY_MUSE_SERVER_MU4_KEY: ${{ secrets.SENTRY_MUSE_SERVER_MU4_KEY }}
+        SENTRY_MUSE_SERVER_MU4_SANDBOX_KEY: ${{ secrets.SENTRY_MUSE_SERVER_MU4_SANDBOX_KEY }}
         SENTRY_PROJECT: ${{ inputs.sentry_project }}
       run: |
         sudo bash ./buildscripts/ci/tools/make_build_mode_env.sh -e ${{ github.event_name }} -m ${{ inputs.build_mode }}
@@ -118,14 +118,14 @@ jobs:
         DO_UPLOAD_SYMBOLS='false'
         SENTRY_URL=""
 
-        if [ "$SENTRY_SERVER_MU4_KEY" != "" ]; then 
+        if [ "$SENTRY_MUSE_SERVER_MU4_KEY" != "" ]; then
           if [ -z "$SENTRY_PROJECT" ] && [ "$BUILD_MODE" == "stable" ]; then 
             SENTRY_PROJECT="mu4"
           fi
 
           if [ "$SENTRY_PROJECT" == "mu4" ]; then 
             DO_UPLOAD_SYMBOLS='true'
-            SENTRY_URL=https://sentry.musescore.org/api/4/minidump/?sentry_key=$SENTRY_SERVER_MU4_KEY
+            SENTRY_URL=https://sentry.dev.mu.se/api/4/minidump/?sentry_key=$SENTRY_MUSE_SERVER_MU4_KEY
           fi
         fi
 
@@ -133,9 +133,9 @@ jobs:
           SENTRY_PROJECT="sandbox"
         fi
 
-        if [ "$SENTRY_PROJECT" == "sandbox" ] && [ "$SENTRY_SERVER_SANDBOX_KEY" != "" ]; then 
+        if [ "$SENTRY_PROJECT" == "sandbox" ] && [ "$SENTRY_MUSE_SERVER_MU4_SANDBOX_KEY" != "" ]; then
           DO_UPLOAD_SYMBOLS='true'
-          SENTRY_URL=https://sentry.musescore.org/api/3/minidump/?sentry_key=$SENTRY_SERVER_SANDBOX_KEY
+          SENTRY_URL=https://sentry.dev.mu.se/api/5/minidump/?sentry_key=$SENTRY_MUSE_SERVER_MU4_SANDBOX_KEY
         fi
 
         if [ $DO_BUILD == 'false' ]; then
@@ -185,7 +185,7 @@ jobs:
         ARCH=armv7l
         sudo cmake -DAPP_BIN=${APP_BIN} \
                    -DARCH=${ARCH} \
-                   -DSENTRY_URL=https://sentry.musescore.org \
+                   -DSENTRY_URL=https://sentry.dev.mu.se \
                    -DSENTRY_ORG=musescore \
                    -DSENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }} \
                    -DSENTRY_PROJECT=${SENTRY_PROJECT} \
@@ -255,16 +255,26 @@ jobs:
         fi
 
         DO_UPLOAD_SYMBOLS='false'
-        SENTRY_PROJECT=${{ inputs.sentry_project }}
         SENTRY_URL=""
-        if [ "$SENTRY_PROJECT" == "editor" ] && [ ${{ secrets.SENTRY_SERVER_MU3_KEY }} != 0 ]; then 
-          DO_UPLOAD_SYMBOLS='true'
-          SENTRY_URL=https://sentry.musescore.org/api/2/minidump/?sentry_key=${{ secrets.SENTRY_SERVER_MU3_KEY }}
+
+        if [ "$SENTRY_MUSE_SERVER_MU4_KEY" != "" ]; then
+          if [ -z "$SENTRY_PROJECT" ] && [ "$BUILD_MODE" == "stable" ]; then
+            SENTRY_PROJECT="mu4"
+          fi
+
+          if [ "$SENTRY_PROJECT" == "mu4" ]; then
+            DO_UPLOAD_SYMBOLS='true'
+            SENTRY_URL=https://sentry.dev.mu.se/api/4/minidump/?sentry_key=$SENTRY_MUSE_SERVER_MU4_KEY
+          fi
         fi
 
-        if [ "$SENTRY_PROJECT" == "sandbox" ] && [ ${{ secrets.SENTRY_SERVER_SANDBOX_KEY }} != 0 ]; then 
+        if [ -z "$SENTRY_PROJECT" ] && [ "$BUILD_MODE" == "nightly" ]; then
+          SENTRY_PROJECT="sandbox"
+        fi
+
+        if [ "$SENTRY_PROJECT" == "sandbox" ] && [ "$SENTRY_MUSE_SERVER_MU4_SANDBOX_KEY" != "" ]; then
           DO_UPLOAD_SYMBOLS='true'
-          SENTRY_URL=https://sentry.musescore.org/api/3/minidump/?sentry_key=${{ secrets.SENTRY_SERVER_SANDBOX_KEY }}
+          SENTRY_URL=https://sentry.dev.mu.se/api/5/minidump/?sentry_key=$SENTRY_MUSE_SERVER_MU4_SANDBOX_KEY
         fi
 
         if [ $DO_BUILD == 'false' ]; then
@@ -315,7 +325,7 @@ jobs:
         ARCH=aarch64
         sudo cmake -DAPP_BIN=${APP_BIN} \
                    -DARCH=${ARCH} \
-                   -DSENTRY_URL=https://sentry.musescore.org \
+                   -DSENTRY_URL=https://sentry.dev.mu.se \
                    -DSENTRY_ORG=musescore \
                    -DSENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }} \
                    -DSENTRY_PROJECT=${SENTRY_PROJECT} \
