--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -77,8 +77,8 @@ jobs:
     - name: "Configure workflow"
       env:
         pull_request_title: ${{ github.event.pull_request.title }}
-        SENTRY_SERVER_MU4_KEY: ${{ secrets.SENTRY_SERVER_MU4_KEY }}
-        SENTRY_SERVER_SANDBOX_KEY: ${{ secrets.SENTRY_SERVER_SANDBOX_KEY }}
+        SENTRY_MUSE_SERVER_MU4_KEY: ${{ secrets.SENTRY_MUSE_SERVER_MU4_KEY }}
+        SENTRY_MUSE_SERVER_MU4_SANDBOX_KEY: ${{ secrets.SENTRY_MUSE_SERVER_MU4_SANDBOX_KEY }}
         SENTRY_PROJECT: ${{ inputs.sentry_project }}
       run: |
         bash ./buildscripts/ci/tools/make_build_mode_env.sh -e ${{ github.event_name }} -m ${{ inputs.build_mode }}
@@ -135,14 +135,14 @@ jobs:
         DO_UPLOAD_SYMBOLS='false'
         SENTRY_URL=""
 
-        if [ "$SENTRY_SERVER_MU4_KEY" != "" ]; then 
+        if [ "$SENTRY_MUSE_SERVER_MU4_KEY" != "" ]; then 
           if [ -z "$SENTRY_PROJECT" ] && [ "$BUILD_MODE" == "stable" ]; then 
             SENTRY_PROJECT="mu4"
           fi
 
           if [ "$SENTRY_PROJECT" == "mu4" ]; then 
             DO_UPLOAD_SYMBOLS='true'
-            SENTRY_URL=https://sentry.musescore.org/api/4/minidump/?sentry_key=$SENTRY_SERVER_MU4_KEY
+            SENTRY_URL=https://sentry.dev.mu.se/api/4/minidump/?sentry_key=$SENTRY_MUSE_SERVER_MU4_KEY
           fi
         fi
 
@@ -150,9 +150,9 @@ jobs:
           SENTRY_PROJECT="sandbox"
         fi
 
-        if [ "$SENTRY_PROJECT" == "sandbox" ] && [ "$SENTRY_SERVER_SANDBOX_KEY" != "" ]; then 
+        if [ "$SENTRY_PROJECT" == "sandbox" ] && [ "$SENTRY_MUSE_SERVER_MU4_SANDBOX_KEY" != "" ]; then 
           DO_UPLOAD_SYMBOLS='true'
-          SENTRY_URL=https://sentry.musescore.org/api/3/minidump/?sentry_key=$SENTRY_SERVER_SANDBOX_KEY
+          SENTRY_URL=https://sentry.dev.mu.se/api/5/minidump/?sentry_key=$SENTRY_MUSE_SERVER_MU4_SANDBOX_KEY
         fi
 
         if [ $DO_BUILD == 'false' ]; then
@@ -237,7 +237,7 @@ jobs:
         cmake -DAPP_BIN=${APP_BIN} \
               -DGENERATE_ARCHS="${GENERATE_ARCHS}" \
               -DBUILD_DIR=${BUILD_DIR} \
-              -DSENTRY_URL=https://sentry.musescore.org \
+              -DSENTRY_URL=https://sentry.dev.mu.se \
               -DSENTRY_ORG=musescore \
               -DSENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }} \
               -DSENTRY_PROJECT=${SENTRY_PROJECT} \
